Fix bug causing nav and scroll-up buttons to flicker

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -34,7 +34,7 @@
 
 .tweet-button:hover {
   cursor: pointer;
-  background-color: #4163a1;
+  background-color: #283968;
 }
 
 .counter {
